fixing alignment on search icons in timeline

--- a/app/assets/stylesheets/dashboard.css.scss
+++ b/app/assets/stylesheets/dashboard.css.scss
@@ -30,12 +30,15 @@
   }
 
   .select_search_div {
-    width: 20%;
+    width: 10%;
     float: left;
-    margin-bottom: 0.75%;
     text-align: center;
     background-color: #383C3D;
     color: white;
+  }
+
+  .categoryChoice {
+    padding: 2%;
   }
 
   .search_input_div {
